--- a/css/style.css
+++ b/css/style.css
@@ -180,3 +180,8 @@ margin: 0 0 30px 0;
 	margin-bottom: 30px;
 	
 }
+/*Work section*/
+.row.no-gutters [class*=col-]{
+	padding-left: 0;
+	padding-right: 0; 
+}
