--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ h3{
 #home-content-box-inner{
 	display: table-cell;
 	vertical-align: middle;
-	/*text-align: center;*/
 }
 #home-heading h3{
 	color: #fff;
@@ -184,4 +183,57 @@ margin: 0 0 30px 0;
 .row.no-gutters [class*=col-]{
 	padding-left: 0;
 	padding-right: 0; 
+}
+.img-wrapper{
+	overflow: hidden;
+}
+.img-wrapper img{
+	transition: transform .5s ease;
+}
+.img-wrapper img:hover{
+	transform: scale(1.5); 
+	cursor: zoom-in;
+}
+/* Team section*/
+.team-member{
+	margin: 0 15px;
+}
+.team-member-info{
+	padding: 10px 0 30px 0;
+
+}
+h4.team-member-name{
+	font-size: 22px;
+	font-weight: 700;
+	letter-spacing: 1px;
+	padding-top: 2px;
+}
+h4.team-member-designation{
+	color: #34c6d3;
+	font-size: 15px;
+	font-weight: 700;
+	font-style: italic;
+	letter-spacing: 1px;
+	margin-top: 5px;
+}
+/* Social icons general*/
+.social-list{
+	padding-left: 0;
+}
+.social-list li{
+	list-style: none;
+	display: inline-block;
+	width: 32px;
+	height: 32px;
+	margin-right: 6px;
+	margin-top: 10px;
+}
+.social-icon i{
+	font-size: 17px;
+}
+.icon-gray{
+	color: #64707b;
+}
+.icon-gray:hover{
+	color: #34c6d3;
 }
