--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,14 @@ h3{
 	border-left: 200px solid #fff;
 	border-top: 700px solid transparent;
 }
+#about-bg-diagonal2{
+	width: 60%;
+	height: 700px;
+	float: left;
+	background-image: url("../img/bg-about.jpg");
+	border-right: 200px solid #fff;
+	border-top: 700px solid transparent;
+}
 #about-content-box{
 	float: left;
 	height: 700px;
@@ -201,6 +209,10 @@ margin: 0 0 30px 0;
 .team-member-info{
 	padding: 10px 0 30px 0;
 
+}
+.team-member img{
+	width: 100%;
+	height: 70%;
 }
 h4.team-member-name{
 	font-size: 22px;
