--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,9 @@ h3{
 #about-content-box-inner{
 	display: table-cell;
 	vertical-align: middle;
+	width: 100%;
+	padding: 0;
+	margin: 0;
 }
 #about .content-title h3{
 	text-align: left;
@@ -185,7 +188,6 @@ margin: 0 0 30px 0;
 }
 #about-description p{
 	margin-bottom: 30px;
-	
 }
 /*Work section*/
 .row.no-gutters [class*=col-]{
