--- a/page1/css/styles.css
+++ b/page1/css/styles.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900');
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 html,
@@ -26,7 +28,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    display: table;
+    position: relative;
 }
 
 .item1 {
@@ -38,16 +40,18 @@ body {
 }
 
 .item3 {
-    background-image: url(../img/bg-home.jpg);
+    background-image: url(../img/asd.jpg);
 }
 
 .item4 {
-    background-image: url(../img/bg-home2.jpg);
+    background-image: url(../img/asd2.jpg);
 }
 
 .out {
-    position: absolute;
-    height: 100%;
+    position: relative;
+    top: 80%;
+    background-color: black;
+    background:rgba(0,0,0,0.4);
 }
 
 #owl-demo {
@@ -56,19 +60,27 @@ body {
 
 .title-slide {
     color: #fff;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 900;
 }
 
 .transbox {
-    top: 80%;
     padding: 10px;
     width: 100%;
-    position: relative;
-    ;
-    background-color: black;
-    opacity: 0.4;
+    opacity: 1;
 }
 
 .content-slide p {
     color: #fff;
     font-weight: bold;
 }
+/* section ISACA*/
+#isaca{
+    margin-top:80px;
+}
+.black-container{
+    background-color: #212521;
+}
+.content {
+    background-color: green;
+  }
