--- a/page1/css/styles.css
+++ b/page1/css/styles.css
@@ -5,7 +5,6 @@
     font-family: 'Source Sans Pro', sans-serif;
 }
 .jumbotron{
-    
     background-attachment: fixed;
     background-size: cover;
     background-position: 50% 50%;
@@ -33,4 +32,25 @@
 }
 .jumbo-transbox-in hr{
     border-top: 1px solid rgba(255,255,255,1);
+}
+
+
+/*
+-----------------------------------------------------------
+                        MOBILE
+----------------------------------------------------------
+*/
+@media only screen and (max-height: 400px) {
+    #jumbo-transbox{
+        min-height: 400px;
+        width: 100%;
+        height: 100%;
+        color: #fff;
+        background-color: rgba(0, 0, 0, 0.4);
+        position: relative;
+        padding: 20px;
+    }
+    .jumbo-transbox-in{
+        margin-top:100px;
+    }
 }
