page1 added isaca section

--- a/page1/css/styles.css
+++ b/page1/css/styles.css
@@ -8,7 +8,7 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: 50% 50%;
-    background-image: url(../img/bg-home.jpg);
+    background-image: url(../img/asd.jpg);
     margin: 0;
     padding: 0;
     height: 50%;
@@ -33,8 +33,23 @@
 .jumbo-transbox-in hr{
     border-top: 1px solid rgba(255,255,255,1);
 }
-
-
+/* ISACA section*/
+#isaca{
+    margin-top: 40px;
+}
+.content-title-line{
+    width: 100px;
+    height: 3px;
+    margin: 0 auto 30px auto;
+    background-color: #FF3D00;
+}
+.content{
+    margin-top: 40px;
+}
+.content-list ul li{
+   margin-top: 5px;
+   margin-left: 10%;
+}
 /*
 -----------------------------------------------------------
                         MOBILE
@@ -42,13 +57,7 @@
 */
 @media only screen and (max-height: 400px) {
     #jumbo-transbox{
-        min-height: 400px;
-        width: 100%;
-        height: 100%;
-        color: #fff;
-        background-color: rgba(0, 0, 0, 0.4);
-        position: relative;
-        padding: 20px;
+        min-height: 300px;
     }
     .jumbo-transbox-in{
         margin-top:100px;
