--- a/page1/css/styles.css
+++ b/page1/css/styles.css
@@ -4,7 +4,8 @@
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
 }
-.jumbotron{
+
+.jumbotron {
     background-attachment: fixed;
     background-size: cover;
     background-position: 50% 50%;
@@ -13,7 +14,8 @@
     padding: 0;
     height: 50%;
 }
-#jumbo-transbox{
+
+#jumbo-transbox {
     min-height: 400px;
     width: 100%;
     height: 100%;
@@ -21,45 +23,119 @@
     background-color: rgba(0, 0, 0, 0.4);
     position: relative;
     padding: 20px;
-
 }
-.img-jumbotron{
+
+.img-jumbotron {
     width: 100px;
     height: 100px;
 }
-.jumbo-transbox-in{
-    margin-top:200px;
+
+.jumbo-transbox-in {
+    margin-top: 200px;
 }
-.jumbo-transbox-in hr{
-    border-top: 1px solid rgba(255,255,255,1);
+
+.jumbo-transbox-in hr {
+    border-top: 1px solid rgba(255, 255, 255, 1);
 }
+
 /* ISACA section*/
-#isaca{
+
+#isaca {
     margin-top: 40px;
 }
-.content-title-line{
+
+.content-title-line {
     width: 100px;
     height: 3px;
     margin: 0 auto 30px auto;
     background-color: #FF3D00;
 }
-.content{
+
+.content {
     margin-top: 40px;
 }
-.content-list ul li{
-   margin-top: 5px;
-   margin-left: 10%;
+
+.content-list ul li {
+    margin-top: 5px;
+    margin-left: 10%;
 }
+
+/* Eventos*/
+
+#eventos {
+    margin-top: 20px;
+}
+
+.event-row {
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    background-color: #FF3D00;
+    color: #fff;
+    max-height: 220px;
+    margin: 20px auto;
+    padding: 30px 0;
+}
+
+.col-event {
+    padding: 10px 30px 5px 30px;
+    background-color: #BF360C;
+}
+
+.col-image {
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    height: 160px;;
+}
+
+.event-date {
+    color: darkblue;
+    font-weight: 900;
+    top: 50%;
+}
+
+.event-row img {
+    max-height: 160px;
+    max-width: 200px;
+}
+
 /*
 -----------------------------------------------------------
                         MOBILE
 ----------------------------------------------------------
 */
+
 @media only screen and (max-height: 400px) {
-    #jumbo-transbox{
+    #jumbo-transbox {
         min-height: 300px;
     }
-    .jumbo-transbox-in{
-        margin-top:100px;
+    .jumbo-transbox-in {
+        margin-top: 100px;
+    }
+    
+}
+@media only screen and (max-width: 800px) {
+    .col-image {
+        display: none;
+    }
+    
+}
+@media only screen and (max-width: 1025px) {
+    .event-row {
+        color: #fff;
+        max-height: 300px;
+        margin: 20px auto;
+        padding: 30px 0;
+    }
+    .col-image {
+        margin: 0;
+        padding: 0;
+        width: 200px;
+        height: 100%;
+    }
+    .event-row img {
+        max-height: 200px;
+        max-width: 300px;
     }
 }
