--- a/page1/css/styles.css
+++ b/page1/css/styles.css
@@ -9,7 +9,7 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: 50% 50%;
-    background-image: url(../img/asd.jpg);
+    background-image: url(../img/asd3.jpg);
     margin: 0;
     padding: 0;
     height: 50%;
@@ -70,7 +70,7 @@
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
     border-radius: 15px;
-    background-color: #FF3D00;
+    background-color: #ff6d00;
     color: #fff;
     margin: 20px auto;
     padding: 30px 0;
@@ -79,13 +79,13 @@
 .col-event {
     
     padding: 10px 30px 5px 30px;
-    background-color: #BF360C;
+    background-color: rgba(0, 0, 0, 0.5)
 }
 .col-image{
     margin: 0;
     padding: 0;
     width: 100%;
-    background-color: #BF360C;
+    background-color:rgba(0, 0, 0, 0.5);
 }
 .col-image img{
     width: 100%;
@@ -93,7 +93,7 @@
 }
 
 .event-date {
-    color: darkblue;
+    color: rgb(248, 149, 0);
     font-weight: 900;
     top: 50%;
 }
@@ -107,7 +107,7 @@
 
 @media only screen and (max-height: 400px) {
     #jumbo-transbox {
-        min-height: 300px;
+        max-height: 100px;
     }
     .jumbo-transbox-in {
         margin-top: 100px;
@@ -115,6 +115,15 @@
     
 }
 @media only screen and (max-width: 800px) {
+    .jumbotron {
+        height: 300px;
+    }
+    #jumbo-transbox {
+        min-height: 300px;
+    }
+    .jumbo-transbox-in {
+        margin-top: 30px;
+    }
     .col-image img {
         display: none;
     }
