--- a/page1/css/styles.css
+++ b/page1/css/styles.css
@@ -61,29 +61,32 @@
 }
 
 /* Eventos*/
-
+.containerone{
+    margin: 0;
+    padding: 0;
+    
+}
 #eventos {
     margin-top: 20px;
 }
 
 .event-row {
-    -webkit-border-radius: 15px;
+   /* -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
-    border-radius: 15px;
-    background-color: #ff6d00;
+    border-radius: 15px;*/
+    background-color: rgba(183,42,0,1);
     color: #fff;
-    margin: 20px auto;
+    margin: 0px 0;
     padding: 30px 0;
 }
 
 .col-event {
-    
-    padding: 10px 30px 5px 30px;
-    background-color: rgba(0, 0, 0, 0.5)
+    padding: 15px 5% 0px 12%;
+    background-color: rgba(0, 0,0, 0.5);
 }
 .col-image{
     margin: 0;
-    padding: 0;
+    padding-right: 15%;
     width: 100%;
     background-color:rgba(0, 0, 0, 0.5);
 }
