--- a/page1/css/styles.css
+++ b/page1/css/styles.css
@@ -172,7 +172,7 @@ h4.team-member-name{
 	padding-top: 2px;
 }
 h4.team-member-designation{
-	color: #34c6d3;
+	color: #FF3D00;
 	font-size: 15px;
 	font-weight: 700;
 	font-style: italic;
