--- a/page1/css/styles.css
+++ b/page1/css/styles.css
@@ -9,7 +9,7 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: 50% 50%;
-    background-image: url(../img/bg-home.jpg);
+    background-image: url(../img/bg-home.png);
     margin: 0;
     padding: 0;
     height: 50%;
@@ -20,7 +20,7 @@
     width: 100%;
     height: 100%;
     color: #fff;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.2);
     position: relative;
     padding: 20px;
 }
@@ -103,8 +103,66 @@
     font-weight: 900;
     top: 50%;
 }
+/*members*/
+.team-member{
+	margin: 0 15px;
+}
+.team-member-info{
+	padding: 10px 0 30px 0;
 
-
+}
+h4.team-member-name{
+	font-size: 22px;
+	font-weight: 700;
+	letter-spacing: 1px;
+	padding-top: 2px;
+}
+h4.team-member-designation{
+	color: #FF3D00;
+	font-size: 15px;
+	font-weight: 700;
+	font-style: italic;
+	letter-spacing: 1px;
+	margin-top: 5px;
+}
+/* join*/
+.bg-parallax{
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+}
+#join-us-diagonal{
+	width: 60%;
+	height: 700px;
+	float: right;
+	background-image: url("../img/gallery/SAM_9048a.png");
+	border-left: 200px solid #fff;
+	border-top: 700px solid transparent;
+}
+#join-us-box{
+	float: left;
+	height: 700px;
+}
+#join-us-box-outer{
+	width: 100%;
+	height: 100%;
+	display: table;
+}
+#join-us-box-inner{
+	display: table-cell;
+	vertical-align: middle;
+}
+#join-us .content-title h3{
+	text-align: left;
+}
+#join-us .content-title-underline{
+margin: 0 0 30px 0;
+}
+#join-us-description p{
+	margin-bottom: 30px;
+	
+}
 /*
 -----------------------------------------------------------
                         MOBILE
@@ -155,27 +213,3 @@
     }
 }
 
-/*members*/
-
-
-.team-member{
-	margin: 0 15px;
-}
-.team-member-info{
-	padding: 10px 0 30px 0;
-
-}
-h4.team-member-name{
-	font-size: 22px;
-	font-weight: 700;
-	letter-spacing: 1px;
-	padding-top: 2px;
-}
-h4.team-member-designation{
-	color: #FF3D00;
-	font-size: 15px;
-	font-weight: 700;
-	font-style: italic;
-	letter-spacing: 1px;
-	margin-top: 5px;
-}
