--- a/page1/css/styles.css
+++ b/page1/css/styles.css
@@ -134,7 +134,7 @@ h4.team-member-designation{
 }
 #join-us-diagonal{
 	width: 60%;
-	height: 700px;
+	height: 100%;
 	float: right;
 	background-image: url("../img/gallery/SAM_9048a.png");
 	border-left: 200px solid #fff;
