--- a/page1/css/styles.css
+++ b/page1/css/styles.css
@@ -29,10 +29,12 @@
     width: 100px;
     height: 100px;
 }
+
 .img-jumbotron-large {
     width: 150px;
     height: 100px;
 }
+
 .jumbo-transbox-in {
     margin-top: 200px;
 }
@@ -64,20 +66,21 @@
 }
 
 /* Eventos*/
-.containerone{
+
+.containerone {
     margin: 0;
     padding: 0;
-    
 }
+
 #eventos {
     margin-top: 20px;
 }
 
 .event-row {
-   /* -webkit-border-radius: 15px;
+    /* -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
     border-radius: 15px;*/
-    background-color: rgba(183,42,0,1);
+    background-color: rgba(183, 42, 0, 1);
     color: #fff;
     margin: 0px 0;
     padding: 30px 0;
@@ -85,15 +88,17 @@
 
 .col-event {
     padding: 15px 5% 0px 12%;
-    background-color: rgba(0, 0,0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
 }
-.col-image{
+
+.col-image {
     margin: 0;
     padding-right: 15%;
     width: 100%;
-    background-color:rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
 }
-.col-image img{
+
+.col-image img {
     width: 100%;
     max-height: 200px;
 }
@@ -103,66 +108,102 @@
     font-weight: 900;
     top: 50%;
 }
-/*members*/
-.team-member{
-	margin: 0 15px;
-}
-.team-member-info{
-	padding: 10px 0 30px 0;
 
+/*members*/
+
+.team-member {
+    margin: 0 15px;
 }
-h4.team-member-name{
-	font-size: 22px;
-	font-weight: 700;
-	letter-spacing: 1px;
-	padding-top: 2px;
+
+.team-member-info {
+    padding: 10px 0 30px 0;
 }
-h4.team-member-designation{
-	color: #FF3D00;
-	font-size: 15px;
-	font-weight: 700;
-	font-style: italic;
-	letter-spacing: 1px;
-	margin-top: 5px;
+
+h4.team-member-name {
+    font-size: 22px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    padding-top: 2px;
+}
+
+h4.team-member-designation {
+    color: #FF3D00;
+    font-size: 15px;
+    font-weight: 700;
+    font-style: italic;
+    letter-spacing: 1px;
+    margin-top: 5px;
+}
+/* Gallery*/
+#gallery{
+    margin: 0;
+    padding: 0;
+    margin-bottom: 50px;
+}
+.row.no-gutters [class*=col-]{
+	padding-left: 0;
+	padding-right: 0; 
+}
+.row.no-gutters img{
+     height: 300px;
+     width: 100%;
+}
+.img-wrapper{
+	overflow: hidden;
+}
+.img-wrapper img{
+	transition: transform .5s ease;
+}
+.img-wrapper img:hover{
+	transform: scale(1.5); 
+	cursor: zoom-in;
 }
 /* join*/
-.bg-parallax{
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	background-attachment: fixed;
+
+.bg-parallax {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
-#join-us-diagonal{
-	width: 60%;
-	height: 100%;
-	float: right;
-	background-image: url("../img/gallery/SAM_9048a.png");
-	border-left: 200px solid #fff;
-	border-top: 700px solid transparent;
+
+#join-us-diagonal {
+    width: 60%;
+    height: 100%;
+    float: right;
+    background-image: url("../img/gallery/1.png");
+    border-left: 200px solid #fff;
+    border-top: 700px solid transparent;
 }
-#join-us-box{
-	float: left;
-	height: 700px;
+
+#join-us-box {
+    float: left;
+    height: 700px;
 }
-#join-us-box-outer{
-	width: 100%;
-	height: 100%;
-	display: table;
+
+#join-us-box-outer {
+    width: 100%;
+    height: 100%;
+    display: table;
 }
-#join-us-box-inner{
-	display: table-cell;
-	vertical-align: middle;
+
+#join-us-box-inner {
+    display: table-cell;
+    vertical-align: middle;
 }
-#join-us .content-title h3{
-	text-align: left;
+
+#join-us .content-title h3 {
+    text-align: left;
 }
-#join-us .content-title-underline{
-margin: 0 0 30px 0;
+
+#join-us .content-title-underline {
+    margin: 0 0 30px 0;
 }
-#join-us-description p{
-	margin-bottom: 30px;
-	
+
+#join-us-description p {
+    margin-bottom: 30px;
 }
+
 /*
 -----------------------------------------------------------
                         MOBILE
@@ -176,8 +217,8 @@ margin: 0 0 30px 0;
     .jumbo-transbox-in {
         margin-top: 100px;
     }
-    
 }
+
 @media only screen and (max-width: 800px) {
     .jumbotron {
         height: 300px;
@@ -191,25 +232,36 @@ margin: 0 0 30px 0;
     .col-image {
         display: none;
     }
-    .event-row div:last-child{
+    .event-row div:last-child {
         padding-bottom: 15px;
     }
 }
+
 @media only screen and (max-width: 1025px) {
     .event-row {
         color: #fff;
         margin: 15px auto;
         padding: 10px 0;
     }
-    .col-image{
+    .col-image {
         margin: 0;
         padding: 0;
         width: 100%;
         background-color: #BF360C;
     }
-    .col-image img{
+    .col-image img {
         width: 100%;
         max-height: 200px;
     }
+    .row-center {
+        text-align: center;
+        vertical-align: middle;
+    }
+    #join-us {
+        margin: 0 auto;
+    }
+    #join-us-box {
+        height: 100px;
+        width: 100%;
+    }
 }
-
